--- a/src/app/components/event-types/playlist-event.component.scss
+++ b/src/app/components/event-types/playlist-event.component.scss
@@ -51,7 +51,7 @@
         line-height: 1.3;
       }
 
-      .playlist-description {
+      .playlist-descriptor {
         margin: 0 0 8px 0;
         color: var(--mat-sys-on-surface-variant);
         line-height: 1.4;
