--- a/src/app/components/user-profile/display-name/profile-display-name.component.html
+++ b/src/app/components/user-profile/display-name/profile-display-name.component.html
@@ -1,15 +1,15 @@
 <span>
   @if (isLoading() || profile() === null) {
-    ...
+  ...
   } @else if (profile() && !profile().isEmpty && profile().data) {
-    @if (profile().data.display_name) {
-      {{ profile().data.display_name }}
-    } @else if (profile().data.name) {
-      {{ profile().data.name }}
-    } @else {
-      {{ npubValue() }}
-    }
+  @if (profile().data.display_name) {
+  {{ profile().data.display_name }}
+  } @else if (profile().data.name) {
+  {{ profile().data.name }}
   } @else {
-    {{ npubValue() }}
+  {{ truncatedNpubValue() }}
+  }
+  } @else {
+  {{ truncatedNpubValue() }}
   }
 </span>
