style: Improve login dialog layout and add clear profile image button functionality

--- a/src/app/components/login-dialog/login-dialog.component.scss
+++ b/src/app/components/login-dialog/login-dialog.component.scss
@@ -435,6 +435,35 @@
 
 .profile-avatar-section {
   flex-shrink: 0;
+  position: relative;
+}
+
+.clear-avatar-button {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: var(--mat-sys-error-container);
+  color: var(--mat-sys-on-error-container);
+  width: 28px;
+  height: 28px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  mat-icon {
+    font-size: 18px;
+    width: 18px;
+    height: 18px;
+    line-height: 18px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &:hover {
+    background-color: var(--mat-sys-error);
+    color: var(--mat-sys-on-error);
+  }
 }
 
 .profile-setup-avatar {
