--- a/src/app/components/event/header/header.component.html
+++ b/src/app/components/event/header/header.component.html
@@ -1,14 +1,8 @@
 <mat-card-header>
   <app-user-profile [pubkey]="event().pubkey">
-    <a
-      class="date-link"
-      [title]="event().created_at * 1000 | date: 'medium'"
-      tabindex="0"
-      role="button"
-      (click)="openEventAndStopPropagation($event)"
-      (keyup.enter)="layout.openEvent(event().id, event())"
-      (keyup.space)="layout.openEvent(event().id, event())"
-    >
+    <a class="date-link" [routerLink]="eventUrl()" [title]="event().created_at * 1000 | date: 'medium'" tabindex="0"
+      (click)="openEventAndStopPropagation($event)" (keyup.enter)="layout.openEvent(event().id, event())"
+      (keyup.space)="layout.openEvent(event().id, event())">
       {{ event().created_at | ago }}
     </a>
     <app-event-menu [event]="event()"></app-event-menu>
