--- a/src/styles.scss
+++ b/src/styles.scss
@@ -499,6 +499,21 @@ mat-card-content li {
   }
 }
 
+/* Animation for spinning icons */
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spinning-icon {
+  animation: spin 1s linear infinite;
+}
+
 .content,
 .content-medium,
 .content-small {
